@@ -9,6 +9,7 @@
 	- removes libpmemlog tests and examples
 	- removes libpmemblk tests and examples
 	- removes log/blk/btt support from pmempool
+	- removes log/blk support from pmemwrite
 	- ...
 
 Wed May 31 2023 Oksana Sałyk <oksana.salyk@intel.com>
